# nextcloudcli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.yaml.example  pyproject.toml
src/nextcloudcli/: __init__.py  cli.py  uploader.py
tests/: conftest.py  test_cli.py  test_uploader.py
